--- a/recipes/protein.html
+++ b/recipes/protein.html
@@ -25,5 +25,6 @@
         <li>Put ingredients into blender</li>
         <li>Blend on high until smooth consistency, then pour into cup and enjoy</li>
     </ol>
+    <a href="../index.html">Back to home</a>
 </body>
 </html>
